@@ -1,5 +1,6 @@
 ## IMPORTS
-import(methods, graphics, stats, RCurl, rjson, DBI,digest,Rcpp,ggplot2,grid,gridExtra)
+import(methods, graphics, stats, RCurl, rjson, DBI,digest,Rcpp,
+	ggplot2,grid,gridExtra,png)
 
 useDynLib(ChemmineR)
 
@@ -53,6 +54,7 @@ export(
     ## Plotting
     ## Source: AllClasses.R
     "plotStruc", 
+	 "openBabelPlot",
 	 "draw_sdf",
 
     ## Atom pair functions
