@@ -2668,6 +2668,20 @@ plotStruc <- function(sdf,
 ## Usage:
 # plotStruc(sdf=sdfset[[2]], atomcex=1.2, atomnum=F, no_print_atoms=c("C"), noHbonds=TRUE, bondspacer=0.08)
 # par(mfrow=c(2,3)); for(i in 1:6) plotStruc(sdf=sdfset[[i]], atomcex=1.8, atomnum=F, no_print_atoms=c("C"), noHbonds=TRUE, bondspacer=0.08)
+openBabelPlot=function(sdfset,
+							 height=600,
+							 noHbonds=TRUE,
+							 regenCoords=FALSE
+){
+	.ensureOB()
+
+	tempF = tempfile()
+	sdf2image(sdfset,tempF,format="PNG",height=height,noHbonds,regenCoords)
+	img = readPNG(tempF)
+	file.remove(tempF)
+	plot(c(0,100),c(0,100), type="n", axes=F, xlab="", ylab="")
+	rasterImage(img,0,0,100,100)
+}
 
 ## Plot method for single SDF object
 setMethod(f="plot", signature="SDF", definition=function(x, print=TRUE, ...) { 
